@@ -2,7 +2,11 @@
 
 - When copying buildout extra directory, preserve file modes.
   [smcmahon]
-- Fix incorrect indentation with plone_zope_conf_additional
+
+- Fix incorrect indentation with plone_zope_conf_additional.
+  [fulv]
+
+- Disable plone_client_tcpcheck for py3.
   [fulv]
 
 1.3.8 2020-02-15
